@startuml

Title "UC26 - Remove an operation request"

package "Domain"{

class OperationRequest{
    - OperationRequestId
    - Priority
    - DeadlineDate
    - PatientID
    - LicenseNumber
    - OperationTypeID
    + OperationRequest(OperationRequestId id, Priority priority, DeadlineDate date, PatientID patientID, LicenseNumber LicenseNumber, OperationTypeID operationTypeID)
}

class OperationRequestID{
    + OperationRequestID(String value)
}

Enum Priority{
    + ElectiveSurgery
    + UrgentSurgery
    + EmergencySurgery
}

class DeadlineDate{
    + Deadline(Date value)
}

class OperationTypeID{
    + OperationTypeID(String value)
}

class PatientID{
    + PatientID(String value)
}

class LicenseNumber{
    + LicenseNumber(String value)
}

}

package "DTO"{

class OperationRequestDTO{
    - Id
    - Priority
    - DeadlineDate
    - PatientID
    - LicenseNumber
    - OperationTypeID
}

class OperationRequestMapper{
    + ToDomain(OperationRequestDTO dto, OperationRequestID)
    + ToDTO(OperationRequest request)
}
}

package "Controllers"{

class OperationRequestsController{
    + GetAll()
    + GetById(OperationRequestID id)
    + FilterOperationRequests(List<OperationRequestDTO> operationRequests)
    + Create(OperationRequestDTO dto)
    + Update(OperationRequestID id, OperationRequestDTO dto)
    + SoftDelete(OperationRequestID id)
    + HardDelete(OperationRequestID id)
}

}

package "Services"{
    class OperationRequestService{
        + GetAllAsync()
        + GetByIdAsync(OperationRequestID id)
        + FilterAsync(List<OperationRequestDTO> operationRequests)
        + AddAsync(OperationRequestDTO DTO)
        + UpdateAsync(OperationRequestDTO DTO)
        + InactivateAsync(OperationRequestId id)
        + DeleteAsync(OperationRequestId id)
    }
}

package "Repositories"{

interface IOperationRequestRepository{
}

interface OperationRequestRepository{
}

class BaseRepository{
====
Base Project class
====
}

}

OperationRequestsController -> OperationRequestService
OperationRequestService --> OperationRequestMapper : uses
OperationRequestService --> OperationRequestDTO : uses

OperationRequestMapper --> OperationRequestDTO : maps domain to
OperationRequestMapper <-- OperationRequest : enters

OperationRequest --> OperationRequestID : has a
OperationRequest --> Priority : has a
OperationRequest --> DeadlineDate : has a
OperationRequest --> PatientID : will be performed at a Patient with a 
OperationRequest --> LicenseNumber : will be performed by a Doctor with a
OperationRequest --> OperationTypeID : has a

OperationRequestService --> OperationRequestRepository

OperationRequestRepository --|> BaseRepository
OperationRequestRepository --|> IOperationRequestRepository

@enduml